--- a/.github/workflows/privado.yml
+++ b/.github/workflows/privado.yml
@@ -3,14 +3,14 @@ on: push
     
 jobs:
   privado:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     if: github.ref_name == github.event.repository.default_branch
     env:
       PRIVADO_API_TOKEN: ${{ secrets.PRIVADO_API_TOKEN }}
-      PRIVADO_API_ID: "2877a17a-b30f-4dbe-a652-4aa4775ac566"
-      PRIVADO_API_HOST: "https://api.code.privado.ai/prod"
+      PRIVADO_API_ID: "3048a221-a48b-4555-8ba7-e291c26c6f43"
+      PRIVADO_API_HOST: "https://t.api.code.privado.ai/test"
       PRIVADO_CI_PLATFORM: "GITHUB_ACTIONS"
-      PRIVADO_DOCKER_IMAGE: 638117407428.dkr.ecr.eu-west-1.amazonaws.com/scanner-agent:latest
+      PRIVADO_DOCKER_IMAGE: 638117407428.dkr.ecr.ap-south-1.amazonaws.com/scanner-agent:latest
       PRIVADO_REPOSITORY_ID: ${{ github.repository_id }}
       PRIVADO_REPOSITORY_NAME: ${{ github.repository }}
       PRIVADO_COMMIT_ID: ${{ github.sha }}
